Add Google Analytics tracking code (G-63TKWHWDKQ)

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,6 +11,16 @@ const { title, description, keywords } = Astro.props;
     <meta name="keywords" content={keywords || ""} />
     <title>{title || ""}</title>
     
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-63TKWHWDKQ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-63TKWHWDKQ');
+    </script>
+    
     <!-- SEO Meta Tags -->
     <meta name="robots" content="index, follow" />
     <meta name="author" content="Hooley Custom Homes LLC" />
