Fix QA issues: Remove Bria Kurtz, add Utah County, fix hyphens, update all links to use proper Astro routing

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -51,7 +51,7 @@ import Layout from "../layouts/Layout.astro";
         <p>
           With deep roots in Sanpete County, our family has been building and
           crafting for generations. What began as a small remodeling business
-          has grown into one of the region's most respected custom home building
+          has grown into one of the region's most respected custom home-building
           companies, known for uncompromising quality and personalized service.
         </p>
         <p>
@@ -90,22 +90,7 @@ import Layout from "../layouts/Layout.astro";
           </div>
         </div>
 
-        <div class="team-member">
-          <div
-            class="team-image"
-            style="background-image: url('/images/profile-pic.jpg')"
-          >
-          </div>
-          <div class="team-content">
-            <h4>Bria Kurtz</h4>
-            <div class="team-role">Project Coordinator</div>
-            <p class="team-bio">
-              Bria ensures seamless project coordination and exceptional client
-              communication throughout the building process. Her attention to
-              detail keeps every project on track.
-            </p>
-          </div>
-        </div>
+
 
         <div class="team-member">
           <div
@@ -120,8 +105,8 @@ import Layout from "../layouts/Layout.astro";
             <div class="team-role">Join Our Team</div>
             <p class="team-bio">
               Are you passionate about building exceptional homes? We're always
-              looking for talented individuals to join our growing team. Contact
-              us to learn about current opportunities.
+              looking for talented individuals to join our growing team. <a href="/contact">Contact
+              us to learn about current opportunities</a>.
             </p>
           </div>
         </div>
@@ -426,7 +411,7 @@ import Layout from "../layouts/Layout.astro";
         Contact us today for a free consultation and discover how we can bring
         your dream home to life in beautiful Central Utah.
       </p>
-      <a href="contact.html" class="btn">Get Started Today</a>
+      <a href="/contact" class="btn">Get Started Today</a>
     </div>
   </section>
 
@@ -455,9 +440,10 @@ import Layout from "../layouts/Layout.astro";
         "https://www.facebook.com/drywallcontractor/",
         "https://www.instagram.com/hooleygeneralcontracting"
       ],
-      "serviceArea": [
+              "serviceArea": [
         "Sanpete County, UT",
         "Juab County, UT",
+        "Utah County, UT",
         "Ephraim, UT",
         "Manti, UT",
         "Fairview, UT",
@@ -467,16 +453,11 @@ import Layout from "../layouts/Layout.astro";
         "@type": "Person",
         "name": "Nate Hooley"
       },
-      "employee": [
+              "employee": [
         {
           "@type": "Person",
           "name": "Nate Hooley",
           "jobTitle": "Owner/Builder"
-        },
-        {
-          "@type": "Person",
-          "name": "Bria Kurtz",
-          "jobTitle": "Project Coordinator"
         }
       ],
       "hasOfferCatalog": {
