--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -65,7 +65,7 @@ import Layout from "../layouts/Layout.astro";
             <li>Modern amenities with classic appeal</li>
             <li>Sustainable building practices</li>
           </ul>
-          <a href="contact.html" class="btn">Start Your Project</a>
+          <a href="/contact" class="btn">Start Your Project</a>
         </div>
       </div>
     </div>
@@ -525,7 +525,7 @@ import Layout from "../layouts/Layout.astro";
                 <span class="spec-value">Luxury</span>
               </div>
             </div>
-            <a href="contact.html" class="btn">Customize Plan</a>
+            <a href="/contact" class="btn">Customize Plan</a>
           </div>
         </div>
       </div>
@@ -637,7 +637,7 @@ import Layout from "../layouts/Layout.astro";
         Contact us today for a free consultation and let's bring your vision to
         life in beautiful Central Utah.
       </p>
-      <a href="contact.html" class="btn">Get Your Free Estimate</a>
+      <a href="/contact" class="btn">Get Your Free Estimate</a>
     </div>
   </section>
 
