--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,8 +19,8 @@ const projects = getProjectsWithMetadata();
       <h1>We Don't Just Build Homes, We Build Relationships</h1>
       <p>Bringing to life the homes people dream of in Sanpete & Juab County</p>
       <div class="hero-buttons">
-        <a href="projects.html" class="btn btn-primary">View Our Projects</a>
-        <a href="contact.html" class="btn btn-secondary">Get A Quote</a>
+        <a href="/projects" class="btn btn-primary">View Our Projects</a>
+        <a href="/contact" class="btn btn-secondary">Get A Quote</a>
       </div>
     </div>
   </section>
@@ -121,7 +121,7 @@ const projects = getProjectsWithMetadata();
         ))}
       </div>
       <div style="text-align: center; margin-top: 40px">
-        <a href="projects.html" class="btn btn-primary">View More</a>
+        <a href="/projects" class="btn btn-primary">View More</a>
       </div>
     </div>
   </section>
@@ -205,7 +205,7 @@ const projects = getProjectsWithMetadata();
         Contact us today for a free consultation and let's bring your vision to
         life.
       </p>
-      <a href="contact.html" class="btn">Get In Touch</a>
+      <a href="/contact" class="btn">Get In Touch</a>
     </div>
   </section>
 
