Fix footer links and add Utah County to service areas

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -23,23 +23,23 @@
         <h3>Services</h3>
         <ul class="footer-links">
           <li>
-            <a href="./services.html#custom-home-building"
+            <a href="/services#custom-home-building"
               >Custom Home Building</a
             >
           </li>
           <li>
-            <a href="./services.html#renovations-and-remodels"
+            <a href="/services#renovations-and-remodels"
               >Renovations & Remodels</a
             >
           </li>
           <li>
-            <a href="./services.html#home-additions">Home Additions</a>
+            <a href="/services#home-additions">Home Additions</a>
           </li>
           <li>
-            <a href="./services.html#income-properties">Income Properties</a>
+            <a href="/services#income-properties">Income Properties</a>
           </li>
           <li>
-            <a href="./services.html#additional-services">Custom Features</a>
+            <a href="/services#additional-services">Custom Features</a>
           </li>
         </ul>
       </div>
@@ -48,6 +48,7 @@
         <ul class="footer-links">
           <li>Sanpete County</li>
           <li>Juab County</li>
+          <li>Utah County</li>
           <li>Ephraim, UT</li>
           <li>Manti, UT</li>
           <li>Fairview, UT</li>
