--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -48,14 +48,14 @@ import Layout from "../layouts/Layout.astro";
       </div>
 
       <!-- Custom Home Building -->
-      <div class="service-detail">
+      <div class="service-detail" id="custom-home-building">
         <div class="service-image">
           <img
             src="/images/Modern Farmhouse.avif"
             alt="Custom Home Building in Central Utah"
           />
         </div>
-        <div class="service-text" id="custom-home-building">
+        <div class="service-text">
           <h3>Custom Home Building</h3>
           <p>
             At Hooley Custom Homes, we specialize in creating custom homes that
@@ -85,14 +85,14 @@ import Layout from "../layouts/Layout.astro";
       </div>
 
       <!-- Income Properties -->
-      <div class="service-detail">
+      <div class="service-detail" id="income-properties">
         <div class="service-image">
           <img
             src="/images/New American Farmhouse.avif"
             alt="Income Properties and ADUs"
           />
         </div>
-        <div class="service-text" id="income-properties">
+        <div class="service-text">
           <h3>Income Properties</h3>
           <p>
             The growing demand for housing in Sanpete and surrounding counties
@@ -121,14 +121,14 @@ import Layout from "../layouts/Layout.astro";
       </div>
 
       <!-- Renovations & Remodels -->
-      <div class="service-detail">
+      <div class="service-detail" id="renovations-and-remodels">
         <div class="service-image">
           <img
             src="/images/Custom Renovation & Remodels.avif"
             alt="Home Renovations in Sanpete County"
           />
         </div>
-        <div class="service-text" id="renovations-and-remodels">
+        <div class="service-text">
           <h3>Renovations & Remodels</h3>
           <p>
             Whether you're updating a historic Sanpete County home or
@@ -157,14 +157,14 @@ import Layout from "../layouts/Layout.astro";
       </div>
 
       <!-- Home Additions -->
-      <div class="service-detail">
+      <div class="service-detail" id="home-additions">
         <div class="service-image">
           <img
             src="/images/Home Office Addition.avif"
             alt="Home Additions in Central Utah"
           />
         </div>
-        <div class="service-text" id="home-additions">
+        <div class="service-text">
           <h3>Home Additions & Extensions</h3>
           <p>
             When your family grows or your needs change, our expertly crafted
@@ -191,14 +191,14 @@ import Layout from "../layouts/Layout.astro";
       </div>
 
       <!-- Custom Features -->
-      <div class="service-detail">
+      <div class="service-detail" id="custom-features">
         <div class="service-image">
           <img
             src="/images/Luxury Remodel.avif"
             alt="Custom Features and Architectural Elements"
           />
         </div>
-        <div class="service-text" id="custom-features">
+        <div class="service-text">
           <h3>Custom Features & Specialty Areas</h3>
           <p>
             The difference between a house and a custom home often lies in the
