Fix footer anchor links: Move IDs directly to header elements for proper scrolling

--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -48,7 +48,7 @@ import Layout from "../layouts/Layout.astro";
       </div>
 
       <!-- Custom Home Building -->
-      <div class="service-detail" id="custom-home-building">
+      <div class="service-detail">
         <div class="service-image">
           <img
             src="/images/Modern Farmhouse.avif"
@@ -56,7 +56,7 @@ import Layout from "../layouts/Layout.astro";
           />
         </div>
         <div class="service-text">
-          <h3>Custom Home Building</h3>
+          <h3 id="custom-home-building">Custom Home Building</h3>
           <p>
             At Hooley Custom Homes, we specialize in creating custom homes that
             embody your unique vision while complementing the distinctive
@@ -85,7 +85,7 @@ import Layout from "../layouts/Layout.astro";
       </div>
 
       <!-- Income Properties -->
-      <div class="service-detail" id="income-properties">
+      <div class="service-detail">
         <div class="service-image">
           <img
             src="/images/New American Farmhouse.avif"
@@ -93,7 +93,7 @@ import Layout from "../layouts/Layout.astro";
           />
         </div>
         <div class="service-text">
-          <h3>Income Properties</h3>
+          <h3 id="income-properties">Income Properties</h3>
           <p>
             The growing demand for housing in Sanpete and surrounding counties
             makes adding an income property an excellent investment. We
@@ -121,7 +121,7 @@ import Layout from "../layouts/Layout.astro";
       </div>
 
       <!-- Renovations & Remodels -->
-      <div class="service-detail" id="renovations-and-remodels">
+      <div class="service-detail">
         <div class="service-image">
           <img
             src="/images/Custom Renovation & Remodels.avif"
@@ -129,7 +129,7 @@ import Layout from "../layouts/Layout.astro";
           />
         </div>
         <div class="service-text">
-          <h3>Renovations & Remodels</h3>
+          <h3 id="renovations-and-remodels">Renovations & Remodels</h3>
           <p>
             Whether you're updating a historic Sanpete County home or
             reimagining a more contemporary space, our renovation and remodeling
@@ -157,7 +157,7 @@ import Layout from "../layouts/Layout.astro";
       </div>
 
       <!-- Home Additions -->
-      <div class="service-detail" id="home-additions">
+      <div class="service-detail">
         <div class="service-image">
           <img
             src="/images/Home Office Addition.avif"
@@ -165,7 +165,7 @@ import Layout from "../layouts/Layout.astro";
           />
         </div>
         <div class="service-text">
-          <h3>Home Additions & Extensions</h3>
+          <h3 id="home-additions">Home Additions & Extensions</h3>
           <p>
             When your family grows or your needs change, our expertly crafted
             home additions provide the perfect solution. We specialize in
@@ -191,7 +191,7 @@ import Layout from "../layouts/Layout.astro";
       </div>
 
       <!-- Custom Features -->
-      <div class="service-detail" id="custom-features">
+      <div class="service-detail">
         <div class="service-image">
           <img
             src="/images/Luxury Remodel.avif"
@@ -199,7 +199,7 @@ import Layout from "../layouts/Layout.astro";
           />
         </div>
         <div class="service-text">
-          <h3>Custom Features & Specialty Areas</h3>
+          <h3 id="custom-features">Custom Features & Specialty Areas</h3>
           <p>
             The difference between a house and a custom home often lies in the
             details. At Hooley Custom Homes, we excel at creating custom
