--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -56,7 +56,9 @@ import Layout from "../layouts/Layout.astro";
           />
         </div>
         <div class="service-text">
-          <h3 id="custom-home-building">Custom Home Building</h3>
+          <div class="service-header-wrapper" id="custom-home-building">
+            <h3>Custom Home Building</h3>
+          </div>
           <p>
             At Hooley Custom Homes, we specialize in creating custom homes that
             embody your unique vision while complementing the distinctive
@@ -93,7 +95,9 @@ import Layout from "../layouts/Layout.astro";
           />
         </div>
         <div class="service-text">
-          <h3 id="income-properties">Income Properties</h3>
+          <div class="service-header-wrapper" id="income-properties">
+            <h3>Income Properties</h3>
+          </div>
           <p>
             The growing demand for housing in Sanpete and surrounding counties
             makes adding an income property an excellent investment. We
@@ -129,7 +133,9 @@ import Layout from "../layouts/Layout.astro";
           />
         </div>
         <div class="service-text">
-          <h3 id="renovations-and-remodels">Renovations & Remodels</h3>
+          <div class="service-header-wrapper" id="renovations-and-remodels">
+            <h3>Renovations & Remodels</h3>
+          </div>
           <p>
             Whether you're updating a historic Sanpete County home or
             reimagining a more contemporary space, our renovation and remodeling
@@ -165,7 +171,9 @@ import Layout from "../layouts/Layout.astro";
           />
         </div>
         <div class="service-text">
-          <h3 id="home-additions">Home Additions & Extensions</h3>
+          <div class="service-header-wrapper" id="home-additions">
+            <h3>Home Additions & Extensions</h3>
+          </div>
           <p>
             When your family grows or your needs change, our expertly crafted
             home additions provide the perfect solution. We specialize in
@@ -199,7 +207,9 @@ import Layout from "../layouts/Layout.astro";
           />
         </div>
         <div class="service-text">
-          <h3 id="custom-features">Custom Features & Specialty Areas</h3>
+          <div class="service-header-wrapper" id="custom-features">
+            <h3>Custom Features & Specialty Areas</h3>
+          </div>
           <p>
             The difference between a house and a custom home often lies in the
             details. At Hooley Custom Homes, we excel at creating custom
