--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -32,7 +32,7 @@ import Layout from "../layouts/Layout.astro";
   </section>
 
   <!-- Our Story Section -->
-  <section class="section">
+  <section class="section story-section">
     <div class="section-header">
       <h2>Our Story</h2>
     </div>
@@ -76,7 +76,7 @@ import Layout from "../layouts/Layout.astro";
         <div class="team-member">
           <div
             class="team-image"
-            style="background-image: url('/images/nate_hooley.jpg')"
+            style="background-image: url('/images/Resized_Hooley (45) (1)_1728179523160(1).jpg')"
           >
           </div>
           <div class="team-content">
